fix URL at telegram service